# comodato-impressoras

./: .gitignore  Application.hs  Foundation.hs  Home.hs  Main.hs  Web service doc.docx  aula.cabal  client_session_key.aes  comodato.cabal  routes
Handler/: Cartucho.hs  Cliente.hs  Comodato.hs  Consumo.hs  Impressora.hs  ImpressoraCartucho.hs  TipoCartucho.hs  TipoCor.hs  Usuario.hs
Tipo/: TipoCartucho.hs  TipoCor.hs
