name:               comodato
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          comodato
  main-is:          Main.hs
  other-modules:    Foundation
                    Application
                    Handler.Usuario
                    Handler.Impressora
                    Handler.Cliente
                    Handler.Cartucho
                    Handler.ImpressoraCartucho
                    Handler.Comodato
                    Handler.Consumo
                    Tipo.TipoCartucho
                    Tipo.TipoCor
------------------
                    
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , text                          
                , persistent                    
                , persistent-postgresql
                , aeson
                , monad-logger
                , persistent-template

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
